# developer-guide

./: .gitignore  .markdownlint.yaml  .mdl_style.rb  .mdlrc  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  guideline_template.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docs.yml  pr-triage.yml  test.yml
docs/: README.md
docs/source/: conf.py  how_to_write_docs.md  index.rst  licensing.md
docs/source/_static/css/: custom.css
docs/source/_static/data_management/: index.rst
docs/source/_static/data_management/file_formats/: netcdf.md
docs/source/data_management/: citing_and_publishing_datasets.md  creating_a_doi.md  data_management.md  data_stewardship.md  digital_object_identifiers.md  fair_principles.md  index.rst  metadata.md
docs/source/data_management/file_formats/: data_management.md  index.rst  netcdf.md
docs/source/programming_languages/: index.rst
docs/source/programming_languages/java/: index.rst  packaging_and_distribution.md  terminology.md
docs/source/programming_languages/python/: best_practices.md  index.rst  packaging_and_distribution.md  terminology.md
docs/source/workflows/: index.rst
docs/source/workflows/Generative AI Tools/: guidelines_for_using_generative_ai_tools_at_lasp.md  index.rst
docs/source/workflows/docker/: advanced_guide_to_docker.md  beginner_guide_to_docker.md  containerizing_idl_with_docker.md  developing_in_devcontainers.md  docker_compose_examples.md  export_display_with_docker.md  index.rst  jenkins_job_builder.md  lasp_docker_registry.md  lasp_image_registry.md  multi_stage_builds.md  running_docker_with_m1.md
docs/source/workflows/generative_ai_tools/: generative_ai_tools_at_lasp.md  guidelines_for_using_generative_ai_tools_at_lasp.md  index.rst
docs/source/workflows/jenkins_job_builder/: containerize_jjb.md  index.rst
docs/source/workflows/open_source/: citing_software.md  code_of_conduct.md  index.rst  lasp_github_org.md  pull_requests.md
guidelines/: licensing.md
