[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "developer-guide"
version = "0.1.0"
description = "Guidelines for software developers at LASP"
authors = [
    "Matthew Bourque <Matthew.Bourque@lasp.colorado.edu>",
    "Keira Brooks <Keira.Brooks@lasp.colorado.edu>",
    "Veronica Martinez <Veronica.Martinez@lasp.colorado.edu>",
    "Alex Ware <Alex.Ware@lasp.colorado.edu>"]
readme = "README.md"
license = "MIT"
keywords = ["LASP", "Developer Guide", "Software"]
classifiers = [
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
sphinx = "^7.3.7"

[project.urls]
homepage = "https://github.com/lasp/"
repository = "https://github.com/lasp/developer-guide"