[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "developer-guide"
version = "0.1.0"
description = "Guidelines for software developers at LASP"
authors = [
    {name = "Matthew Bourque", email = "Matthew.Bourque@lasp.colorado.edu>"},
    {name = "Keira Brooks", email = "Keira.Brooks@lasp.colorado.edu>"},
    {name = "Veronica Martinez", email = "Veronica.Martinez@lasp.colorado.edu>"},
    {name = "Alex Ware", email = "Alex.Ware@lasp.colorado.edu>"}]
readme = "README.md"
license = "MIT"
keywords = ["LASP", "Developer Guide", "Software"]
classifiers = [
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
myst-parser = "^3.0.1"
python = ">=3.9,<4"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[project.urls]
homepage = "https://github.com/lasp/"
repository = "https://github.com/lasp/developer-guide"

[tool.codespell]
ignore-words-list = "nd"